finished footer and fixed alignment issues in the middle content

--- a/index.css
+++ b/index.css
@@ -188,6 +188,7 @@ h2 {
 .left,
 .right {
   display: inline-block;
+  vertical-align: middle;
 }
 .left {
   width: 30%;
@@ -208,6 +209,7 @@ section.main-text div {
   margin: 0 5%;
   color: white;
 }
+
 .centered-image {
   width: 15%;
   height: 15%;
@@ -220,5 +222,9 @@ footer {
   background-color: #f9e7dc;
 }
 .footer-image {
-  width: 100vw;
+  background-image: url("/assets/footer_img.jpg");
+  background-size: cover;
+  background-position: 50% 20%;
+  height: 400px;
+  width: 100%;
 }
